--- a/index.html
+++ b/index.html
@@ -8,6 +8,45 @@
     <title>Nasa Page</title>
 </head>
 <body>
-    
+    <div class="nasa">
+        <h1>NASA</h1>
+    </div>
+    <div class="extra-info">
+    <div class="social">
+        <h2>Social Media</h2>
+        <ul class="contacts">
+            <li>Twitter- @nasa</li>
+            <li>Facebook- fb.com/nasa</li>
+            <li>Instagram- @nasa</li>
+            <li>Youtube- youtube.com/NASA</li>
+        </ul>
+    </div>
+    <div class="office">
+        <h2>OFFICE INFO</h2>
+        <p>Public Communications Office 
+            <br>NASA Headquarters 
+            <br>300 E. Street SW. Suite 5R20 
+            <br>Washington,DC 20546 
+            <br> (202) 358-001 (Office) 
+            <br> (202) 358-4338 (Fax) </p>
+        
+    </div>
+    <div class="contact-us">
+        <h2>CONTACT US</h2>
+        <div class="input-form">
+            <div class="form-group col-md-2">
+              <label for="Name">Name</label>
+              <input type="text" class="form-control" id="Name" name="Name">
+            </div>
+            <div class="form-group col-md-2">
+              <label for="Message">Message</label>
+              <input type="text" class="form-control" id="Message" name="Messsage" >
+            </div>
+            <div class="form-group col-md-2">
+              <button type="submit" class="btn btn-primary">send</button>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
